--- a/html/pages/apsara.html
+++ b/html/pages/apsara.html
@@ -77,6 +77,7 @@
             <img src="/image/apsara7.jpg" alt="" width="100%" style="margin-bottom: 20px;">
             <img src="/image/apsara8.jpg" alt="" width="100%" style="margin-bottom: 20px;">
             <img src="/image/apsara9.jpg" alt="" width="100%" style="margin-bottom: 20px;">
+            <img src="/image/apsara10.jpg" alt="" width="100%" style="margin-bottom: 20px;">
         </div>
     </div>
 
