ko-ker and override all pages

--- a/html/pages/about-chapey.html
+++ b/html/pages/about-chapey.html
@@ -21,9 +21,24 @@
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/3573/3573187.png">
     <title>ចាប៉ីដងវែង</title>
     <link rel="stylesheet" href="/css/about-chapey.css">
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 
 <body>
+    <!-- header -->
+    <div class="header">
+        <img src="/image/logo.png" alt="logo">
+        <!-- Home About Contact -->
+        <div class="head-menu">
+            <ul>
+                <li>
+                    <a href="">ទំព័រដើម</a>
+                    <a href="">អំពីគេហទំព័រ</a>
+                    <a href="">ទំនាក់ទំនង</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div style=" display: flex;justify-content: space-between;">
         <h3 style="font-size: 20px;font-family: 'Moulpali', cursive;">ចាប៉ីដងវែង</h3>
     </div><br>
