--- a/html/pages/angkor-wat.html
+++ b/html/pages/angkor-wat.html
@@ -18,8 +18,23 @@
     <title>ប្រាសាទអង្គវត្ត</title>
 
     <link rel="stylesheet" href="/css/angkor.css">
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
+    <!-- header -->
+    <div class="header">
+        <img src="/image/logo.png" alt="logo">
+        <!-- Home About Contact -->
+        <div class="head-menu">
+            <ul>
+                <li>
+                    <a href="">ទំព័រដើម</a>
+                    <a href="">អំពីគេហទំព័រ</a>
+                    <a href="">ទំនាក់ទំនង</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div style=" display: flex;justify-content: space-between;padding: 10px 0">
         <h3 style="font-size: 20px;">ប្រសាទអង្គវត្ត</h3>
         <button style=" 
