--- a/html/pages/apsara.html
+++ b/html/pages/apsara.html
@@ -5,8 +5,24 @@
     <link rel="stylesheet" href="/css/apsara.css">
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/3573/3573187.png">
     <title>អប្សារា</title>
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
+    <!-- header -->
+    <div class="header">
+        <img src="/image/logo.png" alt="logo">
+        <!-- Home About Contact -->
+        <div class="head-menu">
+            <ul>
+                <li>
+                    <a href="">ទំព័រដើម</a>
+                    <a href="">អំពីគេហទំព័រ</a>
+                    <a href="">ទំនាក់ទំនង</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="apasra-bg"></div>
     <div class="apsara-container">
         <div class="left">
@@ -77,7 +93,34 @@
             <img src="/image/apsara7.jpg" alt="" width="100%" style="margin-bottom: 20px;">
             <img src="/image/apsara8.jpg" alt="" width="100%" style="margin-bottom: 20px;">
             <img src="/image/apsara9.jpg" alt="" width="100%" style="margin-bottom: 20px;">
-            <img src="/image/apsara10.jpg" alt="" width="100%" style="margin-bottom: 20px;">
+        </div>
+    </div>
+    <!-- footer -->
+    <div class="footer">
+        <div class="follow-us">
+            <span>Follow us : </span>
+            <span>
+                &copy; 2012-2023 
+                <a href="https://intocambodia.org/">IntoCambodia.org</a>
+            </span>
+        </div>
+        <div class="useful-links">
+            <ul>
+                <li>
+                    <a href="">អំពីគេហទំព័រ</a>
+                    <a href="">ទំនាក់ទំនង</a>
+                    <a href="">គោលការណ៌ឯកជន</a>
+                </li>
+            </ul>
+        </div>
+        <div class="latest">
+            <ul>
+                <li>
+                    <a href="">បុណ្យភ្ជុំបិណ្ឌ ឬបុណ្យដូនតា</a>
+                    <a href="">ខេត្តកំពង់ធំ</a>
+                    <a href="">ខេត្តសៀមរាប</a>
+                </li>
+            </ul>
         </div>
     </div>
 
