--- a/html/pages/bayon.html
+++ b/html/pages/bayon.html
@@ -16,9 +16,9 @@
         <div class="head-menu">
             <ul>
                 <li>
-                    <a href="">ទំព័រដើម</a>
-                    <a href="">អំពីគេហទំព័រ</a>
-                    <a href="">ទំនាក់ទំនង</a>
+                    <a href="/html/layout/main.html">ទំព័រដើម</a>
+                    <a href="https://intocambodia.org/category/world-heritage">អំពីគេហទំព័រ</a>
+                    <a href="#">ទំនាក់ទំនង</a>
                 </li>
             </ul>
         </div>
@@ -169,18 +169,18 @@
         <div class="useful-links">
             <ul>
                 <li>
-                    <a href="">អំពីគេហទំព័រ</a>
-                    <a href="">ទំនាក់ទំនង</a>
-                    <a href="">គោលការណ៌ឯកជន</a>
+                    <a href="https://intocambodia.org/about-us">អំពីគេហទំព័រ</a>
+                    <a href="#">ទំនាក់ទំនង</a>
+                    <a href="#">គោលការណ៌ឯកជន</a>
                 </li>
             </ul>
         </div>
         <div class="latest">
             <ul>
                 <li>
-                    <a href="">បុណ្យភ្ជុំបិណ្ឌ ឬបុណ្យដូនតា</a>
-                    <a href="">ខេត្តកំពង់ធំ</a>
-                    <a href="">ខេត្តសៀមរាប</a>
+                    <a href="https://intocambodia.org/content/pchum-ben-day-or-ancestor-day">បុណ្យភ្ជុំបិណ្ឌ ឬបុណ្យដូនតា</a>
+                    <a href="https://intocambodia.org/content/kampong-thom-province">ខេត្តកំពង់ធំ</a>
+                    <a href="https://intocambodia.org/content/siem-reap-province">ខេត្តសៀមរាប</a>
                 </li>
             </ul>
         </div>
