--- a/html/pages/apsara.html
+++ b/html/pages/apsara.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/css/apsara.css">
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/3573/3573187.png">
     <title>អប្សារា</title>
+    <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
 </head>
