--- a/html/pages/bakong.html
+++ b/html/pages/bakong.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/3573/3573187.png">
     <title>ប្រាសាទបាគង</title>
+    <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/bakong.css">
@@ -74,7 +75,7 @@
             <p style="margin-bottom: 10px;">រចនាសម្ព័នប្រាសាទបាគង មានរាងជាប្រាសាទពីរ៉ាមីត ដែលគេស្គាល់ថាជាប្រាសាទភ្នំនៃស្ថាបត្យកម្មប្រាសាទខ្មែរសម័យដើម។ ភាពស្រដៀងគ្នាដ៏គួរឱ្យចាប់អារម្មណ៍នៃប្រាសាទបាគង និងប្រាសាទបូរូប៊ូឌួនៅជ្វា ដែលចូលទៅក្នុងព័ត៌មានលម្អិតស្ថាបត្យកម្មដូចជាខ្លោងទ្វារ និងជណ្តើរទៅកាន់ផ្ទៃរាបស្មើខាងលើ បង្ហាញយ៉ាងមុតមាំថា បូរ៉ូប៊ូឌួបានបម្រើជាគំរូដើមរបស់បាគង។ ត្រូវតែមានការផ្លាស់ប្តូរអ្នកធ្វើដំណើរ ប្រសិនបើមិនមែនជាបេសកកម្មទេ រវាងនគរ r និង Sailendras នៅកោះជ្វា។ ការបញ្ជូនមកប្រទេសកម្ពុជាមិនត្រឹមតែគំនិតប៉ុណ្ណោះទេ ប៉ុន្តែក៏មានព័ត៌មានលម្អិតផ្នែកបច្ចេកទេស និងស្ថាបត្យកម្មនៃបូរ៉ូប៊ូឌួ រួមទាំងក្លោងទ្វារដែលមានរាងកោងនៅក្នុងវិធីសាស្ត្រ corbelling ផងដែរ។ ជាងនេះទៅទៀត ប្រាសាទបាគងត្រូវបានជ្រើសរើសជាគំរូសម្រាប់ការសាងសង់វិមានឯករាជ្យក្នុងរាជធានីភ្នំពេញ។</p>
             <p style="margin-bottom: 10px;">ប្រាសាទបាគងនៃរលួសគឺជាប្រាសាទមួយក្នុងចំណោមប្រាសាទបុរាណជាច្រើនដែលស្ថិតនៅក្នុងតំបន់អង្គរ មានន័យថាប្រាសាទនេះក៏ជាផ្នែកនៃ 401 គីឡូម៉ែត្រការ៉េ ដែលជាបេតិកភណ្ឌរបស់មនុស្សជាតិ និងអច្ឆរិយៈពិភពលោកដោយអង្គការយូណេស្កូ នៅថ្ងៃទី 14 ខែធ្នូ ឆ្នាំ 1992 ។</p>
             <div style="display: flex; justify-content: center; margin: 20px;">
-                <img src="/image/bakong7.jpg" alt="">
+                <img src="/image/bakong7.jpg" alt="" class="last-img" width="100%">
             </div>
         </div>
     </div>
