--- a/html/pages/mekhala.html
+++ b/html/pages/mekhala.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/3573/3573187.png">
     <title>របាំព្រះមុនីមាឃលា</title>
+    <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/mekhala.css">
@@ -44,7 +45,7 @@
         </button>
         <h2 class="title">របាំព្រះមុនីមាឃលា គឺជារបាំព្រះរាជទ្រព្យនៃព្រះរាជាណាចក្រកម្ពុជា</h2>
         <p style="margin: 10px 0;">&emsp;កម្ពុជា​ជា​ប្រទេស​ពោរពេញ​ដោយ​វប្បធម៌ និង​សម្បូរ​អរិយធម៌​នៅ​អាស៊ីអាគ្នេយ៍។ ក្រៅ​ពី​បេតិកភណ្ឌ​វប្បធម៌ ប្រាសាទ​បុរាណ និង​សិល្បៈ​ប្រពៃណី នៅ​មាន​បេតិកភណ្ឌ​វប្បធម៌​អរូបី​គ្រប់​ទីកន្លែង​ក្នុង​ប្រទេស​កម្ពុជា។ ក៏មានបេតិកភណ្ឌវប្បធម៌អរូបីផ្សេងៗគ្នាជាច្រើនរបស់ដូនតាខ្មែរផងដែរ។ របាំប្រពៃណីខ្មែរមានក្បាច់ផ្សេងៗ។ របាំ​មួយ​ក្នុង​ចំណោម​នោះ​គឺ​របាំ​ព្រះមុនី​មេខឡា​ដែល​ជា​របាំ​ប្រពៃណី​ដែល​មាន​ប្រជាប្រិយ​ភាព​ក្នុង​ចំណោម​ប្រជាជន​កម្ពុជា។</p>
-        <div style="display: flex; justify-content: space-between;">
+        <div class="sub-container" style="display: flex; justify-content: space-between;">
             <div class="img-container">
                 <div class="box">
                     <img src="/image/mekhala1.jpg" alt="" width="100%" height="100%" style="object-fit: cover;">
