correct mekhala word in khmer

--- a/html/pages/mekhala.html
+++ b/html/pages/mekhala.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/3573/3573187.png">
-    <title>របាំព្រះមុនីមាឃលា</title>
+    <title>របាំព្រះមណីមេខលា</title>
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/mekhala.css">
@@ -42,7 +42,7 @@
         >
             Back
         </button>
-        <h2 class="title">របាំព្រះមុនីមាឃលា គឺជារបាំព្រះរាជទ្រព្យនៃព្រះរាជាណាចក្រកម្ពុជា</h2>
+        <h2 class="title">របាំព្រះមណីមេខលា គឺជារបាំព្រះរាជទ្រព្យនៃព្រះរាជាណាចក្រកម្ពុជា</h2>
         <p style="margin: 10px 0;">&emsp;កម្ពុជា​ជា​ប្រទេស​ពោរពេញ​ដោយ​វប្បធម៌ និង​សម្បូរ​អរិយធម៌​នៅ​អាស៊ីអាគ្នេយ៍។ ក្រៅ​ពី​បេតិកភណ្ឌ​វប្បធម៌ ប្រាសាទ​បុរាណ និង​សិល្បៈ​ប្រពៃណី នៅ​មាន​បេតិកភណ្ឌ​វប្បធម៌​អរូបី​គ្រប់​ទីកន្លែង​ក្នុង​ប្រទេស​កម្ពុជា។ ក៏មានបេតិកភណ្ឌវប្បធម៌អរូបីផ្សេងៗគ្នាជាច្រើនរបស់ដូនតាខ្មែរផងដែរ។ របាំប្រពៃណីខ្មែរមានក្បាច់ផ្សេងៗ។ របាំ​មួយ​ក្នុង​ចំណោម​នោះ​គឺ​របាំ​ព្រះមុនី​មេខឡា​ដែល​ជា​របាំ​ប្រពៃណី​ដែល​មាន​ប្រជាប្រិយ​ភាព​ក្នុង​ចំណោម​ប្រជាជន​កម្ពុជា។</p>
         <div style="display: flex; justify-content: space-between;">
             <div class="img-container">
@@ -63,20 +63,20 @@
                 </div>
             </div>
             <div class="content">
-                <p>របាំប្រពៃណីខ្មែរ ត្រូវបានគេរកឃើញក្នុងទម្រង់ផ្សេងៗគ្នា ដូចជា៖ របាំត្រុដិ រាំវង់ កន្ទួតប៉ៃលិន បាស់ក្រវាញ របាំព្រះរាជត្រប់ជា (របាំព្រះរាជទ្រព្យ) អប្សរា ទេពមនោរម្យ មុនីមាឃលា សុវណ្ណមច្ឆា ជាដើម។ តួនាទីសំខាន់ក្នុងអក្សរសិល្ប៍ខ្មែរ។</p>
+                <p>របាំប្រពៃណីខ្មែរ ត្រូវបានគេរកឃើញក្នុងទម្រង់ផ្សេងៗគ្នា ដូចជា៖ របាំត្រុដិ រាំវង់ កន្ទួតប៉ៃលិន បាស់ក្រវាញ របាំព្រះរាជត្រប់ជា (របាំព្រះរាជទ្រព្យ) អប្សរា ទេពមនោរម្យ មណីមេខលា សុវណ្ណមច្ឆា ជាដើម។ តួនាទីសំខាន់ក្នុងអក្សរសិល្ប៍ខ្មែរ។</p>
                 <br>
                 <ul>
                     <li><b>ទិដ្ឋភាពទូទៅនៃការរាំរបាំមនោរម្យ</b></li>
                 </ul>
-                <p>ក្នុងនាមជាល្ខោនខោលមួយក្នុងចំនោមរបាំបុរាណខ្មែរ របាំមុនីមាឃលា រំលេចនូវទេវកថាខ្មែរអំពីផ្គរ ផ្លេកបន្ទោរ និងភ្លៀង ដែលទាក់ទងនឹងជំនឿព្រះពុទ្ធសាសនា និងព្រហ្មញ្ញសាសនា។</p>
+                <p>ក្នុងនាមជាល្ខោនខោលមួយក្នុងចំនោមរបាំបុរាណខ្មែរ របាំមណីមេខលា រំលេចនូវទេវកថាខ្មែរអំពីផ្គរ ផ្លេកបន្ទោរ និងភ្លៀង ដែលទាក់ទងនឹងជំនឿព្រះពុទ្ធសាសនា និងព្រហ្មញ្ញសាសនា។</p>
                 <br>
-                <p>មួយកម្រិតធំ របាំនេះតំណាងឱ្យការប្រយុទ្ធរបស់ រាម ឥស្សរ ជាមួយមុនី មាឃលា ដែលគាត់ខិតខំដណ្តើមយកបាល់គ្រីស្តាល់អាថ៌កំបាំងរបស់ព្រះមុនីមាឃលា។ មេខលា មានន័យយ៉ាងណា? នាងគឺជាទេពធីតានៃសមុទ្រ។ ផ្ទុយ​ពី​នាង រាម អ៊ីសូ ជា​បិសាច។ លោកគ្រូតាមុនី ឥសីដែលជាឥស្សរជនដែលមានចំណេះដឹង និងរឹងមាំ បានអប់រំពួកគេទាំងពីរជាកូនសិស្សជាទីពេញចិត្ត។</p>
+                <p>មួយកម្រិតធំ របាំនេះតំណាងឱ្យការប្រយុទ្ធរបស់ រាម ឥស្សរ ជាមួយមុនី មាឃលា ដែលគាត់ខិតខំដណ្តើមយកបាល់គ្រីស្តាល់អាថ៌កំបាំងរបស់ព្រះមណីមេខលា។ មេខលា មានន័យយ៉ាងណា? នាងគឺជាទេពធីតានៃសមុទ្រ។ ផ្ទុយ​ពី​នាង រាម អ៊ីសូ ជា​បិសាច។ លោកគ្រូតាមុនី ឥសីដែលជាឥស្សរជនដែលមានចំណេះដឹង និងរឹងមាំ បានអប់រំពួកគេទាំងពីរជាកូនសិស្សជាទីពេញចិត្ត។</p>
                 <br>
                 <ul>
                     <li><b>ទេវកថាខ្មែរនៃរន្ទះ ផ្គរ និងភ្លៀង</b></li>
                 </ul>
-                <p style="margin: 10px 0;">មានការភ្ជាប់គ្នារវាងរបាំនេះ និងទេវកថារបស់ព្រះមុនីមាឃលា (ព្រះទឹក) និងរាមអ៊ីសូ (វិញ្ញាណព្យុះ)។ សម័យមួយ លោកតាមុនី កែវសី ធ្លាប់គង់នៅក្នុងចិត្តព្រៃ។ គាត់គឺជាគ្រូបង្រៀនដែលមានបាល់វេទមន្ត ហើយមានបំណងផ្តល់ឱ្យវាដល់សិស្សដែលប្តេជ្ញាចិត្តបំផុតរបស់គាត់ជារង្វាន់សម្រាប់ការខិតខំប្រឹងប្រែងរបស់ពួកគេ។ ឥស្សរិយយស​ដ៏​មាន​ឫទ្ធិ​មាន​ប្រាជ្ញា​ឈ្លាស​វៃ​នេះ​មាន​សិស្ស​បី​នាក់​គឺ​មុនី​មាឃ​លា រាម​អ៊ី​សូ និង​ព្រះ​វររាជ​បិតា។ ទោះជាយ៉ាងណាក៏ដោយ គាត់មានការលំបាកក្នុងការសម្រេចចិត្តថាតើសិស្សឆ្នើមមួយណាសមនឹងទទួលបានបាល់ច្រើនជាងគេ។</p>
-                <p style="margin: 10px 0;">មានការភ្ជាប់គ្នារវាងរបាំនេះ និងទេវកថារបស់ព្រះមុនីមាឃលា (ព្រះទឹក) និងរាមអ៊ីសូ (វិញ្ញាណព្យុះ)។ សម័យមួយ លោកតាមុនី កែវសី ធ្លាប់គង់នៅក្នុងចិត្តព្រៃ។ គាត់គឺជាគ្រូបង្រៀនដែលមានបាល់វេទមន្ត ហើយមានបំណងផ្តល់ឱ្យវាដល់សិស្សដែលប្តេជ្ញាចិត្តបំផុតរបស់គាត់ជារង្វាន់សម្រាប់ការខិតខំប្រឹងប្រែងរបស់ពួកគេ។ ឥស្សរិយយស​ដ៏​មាន​ឫទ្ធិ​មាន​ប្រាជ្ញា​ឈ្លាស​វៃ​នេះ​មាន​សិស្ស​បី​នាក់​គឺ​មុនី​មាឃ​លា រាម​អ៊ី​សូ និង​ព្រះ​វររាជ​បិតា។ ទោះជាយ៉ាងណាក៏ដោយ គាត់មានការលំបាកក្នុងការសម្រេចចិត្តថាតើសិស្សឆ្នើមមួយណាសមនឹងទទួលបានបាល់ច្រើនជាងគេ។</p>
+                <p style="margin: 10px 0;">មានការភ្ជាប់គ្នារវាងរបាំនេះ និងទេវកថារបស់ព្រះមណីមេខលា (ព្រះទឹក) និងរាមអ៊ីសូ (វិញ្ញាណព្យុះ)។ សម័យមួយ លោកតាមុនី កែវសី ធ្លាប់គង់នៅក្នុងចិត្តព្រៃ។ គាត់គឺជាគ្រូបង្រៀនដែលមានបាល់វេទមន្ត ហើយមានបំណងផ្តល់ឱ្យវាដល់សិស្សដែលប្តេជ្ញាចិត្តបំផុតរបស់គាត់ជារង្វាន់សម្រាប់ការខិតខំប្រឹងប្រែងរបស់ពួកគេ។ ឥស្សរិយយស​ដ៏​មាន​ឫទ្ធិ​មាន​ប្រាជ្ញា​ឈ្លាស​វៃ​នេះ​មាន​សិស្ស​បី​នាក់​គឺ​មុនី​មាឃ​លា រាម​អ៊ី​សូ និង​ព្រះ​វររាជ​បិតា។ ទោះជាយ៉ាងណាក៏ដោយ គាត់មានការលំបាកក្នុងការសម្រេចចិត្តថាតើសិស្សឆ្នើមមួយណាសមនឹងទទួលបានបាល់ច្រើនជាងគេ។</p>
+                <p style="margin: 10px 0;">មានការភ្ជាប់គ្នារវាងរបាំនេះ និងទេវកថារបស់ព្រះមណីមេខលា (ព្រះទឹក) និងរាមអ៊ីសូ (វិញ្ញាណព្យុះ)។ សម័យមួយ លោកតាមុនី កែវសី ធ្លាប់គង់នៅក្នុងចិត្តព្រៃ។ គាត់គឺជាគ្រូបង្រៀនដែលមានបាល់វេទមន្ត ហើយមានបំណងផ្តល់ឱ្យវាដល់សិស្សដែលប្តេជ្ញាចិត្តបំផុតរបស់គាត់ជារង្វាន់សម្រាប់ការខិតខំប្រឹងប្រែងរបស់ពួកគេ។ ឥស្សរិយយស​ដ៏​មាន​ឫទ្ធិ​មាន​ប្រាជ្ញា​ឈ្លាស​វៃ​នេះ​មាន​សិស្ស​បី​នាក់​គឺ​មុនី​មាឃ​លា រាម​អ៊ី​សូ និង​ព្រះ​វររាជ​បិតា។ ទោះជាយ៉ាងណាក៏ដោយ គាត់មានការលំបាកក្នុងការសម្រេចចិត្តថាតើសិស្សឆ្នើមមួយណាសមនឹងទទួលបានបាល់ច្រើនជាងគេ។</p>
                 <ul>
                     <li><b>សំណើប្រកួតប្រជែង</b></li>
                 </ul>
