--- a/html/pages/apsara.html
+++ b/html/pages/apsara.html
@@ -107,11 +107,13 @@
                     </div>
                 </div>
             </div>
-            <img src="/image/cambodia-flag.webp" alt="" width="100%" style="margin-bottom: 20px;">
-            <img src="/image/apsara6.jpg" alt="" width="100%" style="margin-bottom: 20px;">
-            <img src="/image/apsara7.jpg" alt="" width="100%" style="margin-bottom: 20px;">
-            <img src="/image/apsara8.jpg" alt="" width="100%" style="margin-bottom: 20px;">
-            <img src="/image/apsara9.jpg" alt="" width="100%" style="margin-bottom: 20px;">
+            <div class="apsara-img">
+                <img src="/image/cambodia-flag.webp" alt="" width="100%" style="margin-bottom: 20px;">
+                <img src="/image/apsara6.jpg" alt="" width="100%" style="margin-bottom: 20px;">
+                <img src="/image/apsara7.jpg" alt="" width="100%" style="margin-bottom: 20px;">
+                <img src="/image/apsara8.jpg" alt="" width="100%" style="margin-bottom: 20px;">
+                <img src="/image/apsara9.jpg" alt="" width="100%" style="margin-bottom: 20px;">
+            </div>
         </div>
     </div>
     <!-- footer -->
