change image name

--- a/html/pages/angkor-wat.html
+++ b/html/pages/angkor-wat.html
@@ -68,7 +68,7 @@
 
         <div class="mySlides fade">
             <div class="numbertext">២ / ៣</div>
-            <img src="/image/ព្របាទសូរយ្យវរ័្មនទៅ២.jpg" style="width:100%" alt="img">
+            <img src="/image/p1.jpg" style="width:100%" alt="img">
             <div class="text">ព្រះបាទសូរយ្យវរ័្មនទី២</div>
         </div>
 
