change image name

--- a/html/pages/angkor-wat.html
+++ b/html/pages/angkor-wat.html
@@ -74,7 +74,7 @@
 
         <div class="mySlides fade">
             <div class="numbertext">៣ / ៣</div>
-            <img src="/image/ព្រះបាទជ័យវ័រ្មនទៅ៧.jpg" style="width:100%" alt="img">
+            <img src="/image/p2.jpg" style="width:100%" alt="img">
             <div class="text">ព្រះបាទជ័យវរ្ម័នទី៧</div>
         </div>
         <a class="prev" onclick="plusSlides(-1)">❮</a>
